; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_timer-win2.c_mp_raw_time_us.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_timer-win2.c_mp_raw_time_us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@perf_freq = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_raw_time_us() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = call i32 @QueryPerformanceCounter(%struct.TYPE_4__* %1)
  %3 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @perf_freq, i32 0, i32 0), align 4
  %6 = sdiv i32 %4, %5
  %7 = mul nsw i32 %6, 1000000
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @perf_freq, i32 0, i32 0), align 4
  %11 = srem i32 %9, %10
  %12 = mul nsw i32 %11, 1000000
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @perf_freq, i32 0, i32 0), align 4
  %14 = sdiv i32 %12, %13
  %15 = add nsw i32 %7, %14
  ret i32 %15
}

declare dso_local i32 @QueryPerformanceCounter(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
